<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.InsertRecord">

    <TextView
        android:id="@+id/insertrecordDateText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/insertrecordDate"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="date"
        android:textSize="20sp"
        android:hint="@string/date"
        app:layout_constraintBottom_toBottomOf="@+id/insertrecordDateText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="20dp"
        android:focusable="false"
        android:textStyle="bold|italic"
        />
    <TextView
        android:id="@+id/insertrecordExpTypeText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/type"
        app:layout_constraintTop_toBottomOf="@id/insertrecordDateText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold|italic"
        />
    <EditText
        android:id="@+id/insertrecordExpType"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/exp_type"
        app:layout_constraintBottom_toBottomOf="@+id/insertrecordExpTypeText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="20dp"
        android:focusable="false"
        />
    <TextView
        android:id="@+id/insertrecordPaymentMethodText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/payment"
        app:layout_constraintTop_toBottomOf="@id/insertrecordExpTypeText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold|italic"
        />
    <EditText
        android:id="@+id/insertrecordPaymentMethod"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/payment_method"
        app:layout_constraintBottom_toBottomOf="@+id/insertrecordPaymentMethodText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="20dp"
        android:focusable="false"
        />

    <TextView
        android:id="@+id/insertrecordAmountText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/amount"
        app:layout_constraintTop_toBottomOf="@id/insertrecordPaymentMethodText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold|italic"
        />
    <EditText
        android:id="@+id/insertrecordAmount"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/insertrecordAmountText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="120dp"
        />

    <EditText
        android:id="@+id/insertrecordCurrency"
        android:layout_height="45dp"
        android:layout_width="wrap_content"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/currency"
        app:layout_constraintStart_toEndOf="@id/insertrecordAmount"
        app:layout_constraintBottom_toBottomOf="@+id/insertrecordAmount"
        app:layout_constraintEnd_toEndOf="@+id/insertrecordPaymentMethod"
        android:layout_marginStart="5dp"
        android:focusable="false"
        />
    <TextView
        android:id="@+id/insertrecordDetailsText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/details"
        app:layout_constraintTop_toBottomOf="@id/insertrecordAmountText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold|italic"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/insertrecordDetailsTextInput"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="358dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertrecordDetailsText"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insertrecordDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/details"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/insertrecordButtonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/flat_button"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/insertrecordSaveB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/save"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold"
            android:drawableTop="@android:drawable/ic_menu_save"/>

        <Button
            android:id="@+id/insertrecordSaveAddB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawableTop="@android:drawable/ic_menu_add"
            android:background="@android:color/transparent"
            android:text="@string/saveandadd"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/insertrecordCancelB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawableTop="@android:drawable/ic_menu_close_clear_cancel"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>