<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NewTrip">

    <TextView
        android:id="@+id/newtripLabelText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/trip_name"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newtripLabel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="190dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/insert_here"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/newtripLabelText"
        app:layout_constraintStart_toEndOf="@id/newtripLabelText"
        />


    <TextView
        android:id="@+id/newtripCurrencyText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/std_currency"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newtripLabelText" />

    <EditText
        android:id="@+id/newtripCurrency"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="190dp"
        android:layout_marginEnd="10dp"
        android:focusable="false"
        android:hint="@string/insert_here"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/newtripCurrencyText"
        app:layout_constraintStart_toEndOf="@id/newtripCurrencyText" />

    <TextView
        android:id="@+id/newtripBudgetText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/budget"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newtripCurrencyText" />

    <EditText
        android:id="@+id/newtripBudget"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="190dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/insert_here"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/newtripBudgetText"
        app:layout_constraintStart_toEndOf="@id/newtripBudgetText" />

    <TextView
        android:id="@+id/newtripDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/details"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newtripBudgetText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newtripDescriptionGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="@id/newtripDescriptionText"
        app:layout_constraintTop_toBottomOf="@+id/newtripDescriptionText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newtripDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_details"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/newtripMandatoryText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/mandatory"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newtripDescriptionGroup" />

    <LinearLayout
        android:id="@+id/newtripButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/flat_button"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/newtripSaveB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableTop="@android:drawable/ic_menu_save"
            android:text="@string/save"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold" />
        />

        <Button
            android:id="@+id/newtripCancelB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:drawableTop="@android:drawable/ic_menu_close_clear_cancel"
            android:text="@string/cancel"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold" />
        />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>