<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/newtripcL1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
    <TextView
        android:id="@+id/newtripCCurrencyText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/currency"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="italic|bold"
        />
    <EditText
        android:id="@+id/newtripCCurrency"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:inputType="text"
        android:focusable="true"
        />
    </LinearLayout>
    <LinearLayout
    android:id="@+id/newtripCLayout2"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_below="@+id/newtripcL1"
    >
    <TextView
        android:id="@+id/newtripCExgRateText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/exg_rate"
        android:textSize="20sp"
        android:layout_gravity="center_vertical"
        android:textStyle="italic|bold"
        />
    <EditText
        android:id="@+id/newtripCExgRate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="numberDecimal"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textSize="20sp"
        />
</LinearLayout>
    <LinearLayout
        android:id="@+id/newtripCLayout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/newtripCLayout2"
        >
        <TextView
            android:id="@+id/newtripCDisplayOrderText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/order"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:textStyle="italic|bold"
            />
        <EditText
            android:id="@+id/newtripCDisplayOrder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:textSize="20sp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/newtripCSaveButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/newtripCLayout3"
        android:background="@drawable/round_button"
        android:layout_margin="10dp"
        android:text="@string/save"/>


</RelativeLayout>